# goit-web-hw-07

./: .env-sample  .gitignore  my_select.py  pyproject.toml  seed.py
alembic/versions/: d2426fea061f_init.py
src/: database.py  models.py  settings.py
